--- a/car-workshop/views/car-workshop.xml
+++ b/car-workshop/views/car-workshop.xml
@@ -38,10 +38,19 @@
         <!--Action Vehicle Models Menu-->
         <record model="ir.actions.act_window" id="action_car_vmodels_config">
             <field name="name">Vehicle Models</field>
-            <field name="res_model">fleet.vehicle</field>
+            <field name="res_model">fleet.vehicle.model</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+        <!--Action Vehicle Brand Menu-->
+        <record model="ir.actions.act_window" id="action_car_vbrands_config">
+            <field name="name">Vehicle Brands</field>
+            <field name="res_model">fleet.vehicle.model.brand</field>
             <field name="view_type">form</field>
             <field name="view_mode">kanban,form</field>
         </record>
+
 
         <!--Main Menu-->
         <menuitem id="main_car_workshop_menu" name="Car Workshop"
@@ -80,8 +89,15 @@
                   sequence="3"/>
 
         <!--Vehicle Models Menu-->
-        <menuitem id="car_vmodels_menus" name="Models"
+        <menuitem id="car_vmodels_menu" name="Models"
                   parent="car_vconfig_menus"
                   sequence="1" action="action_car_vmodels_config"/>
+
+        <!--Vehicle Brand Menu-->
+        <menuitem id="car_vbrands_menu" name="Brand"
+                  parent="car_vconfig_menus"
+                  sequence="2" action="action_car_vbrands_config"/>
+
+
     </data>
 </odoo>
