--- a/car-workshop/views/car-workshop.xml
+++ b/car-workshop/views/car-workshop.xml
@@ -2,20 +2,13 @@
 <odoo>
     <data>
 
-        <!--Action Repairs Menu-->
-        <record model="ir.actions.act_window" id="action_car_repairs_config">
-            <field name="name">Repairs</field>
-            <field name="res_model">project.project</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">kanban,form</field>
-        </record>
 
-        <!--Action Orders Menu-->
-        <record model="ir.actions.act_window" id="action_car_orders_config">
-            <field name="name">Orders</field>
-            <field name="res_model">project.task</field>
+        <!--Action Account Invoice Menu-->
+        <record model="ir.actions.act_window" id="action_car_account_invoice_config">
+            <field name="name">Account Invoice</field>
+            <field name="res_model">account.invoice</field>
             <field name="view_type">form</field>
-            <field name="view_mode">kanban,form</field>
+            <field name="view_mode">tree,form</field>
         </record>
 
         <!--Action Customers Menu-->
@@ -25,14 +18,6 @@
             <field name="view_type">form</field>
             <field name="view_mode">kanban,form</field>
             <field name="context">{"search_default_customer":1}</field>
-        </record>
-
-        <!--Action Vehicles Menu-->
-        <record model="ir.actions.act_window" id="action_car_vehicles_config">
-            <field name="name">Vehicles</field>
-            <field name="res_model">fleet.vehicle</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">kanban,form</field>
         </record>
 
         <!--Action Vehicle Models Menu-->
@@ -74,37 +59,26 @@
         <menuitem id="main_car_workshop_menu" name="Car Workshop"
                   sequence="1"/>
 
-        <!--Repairs Menu-->
-        <menuitem id="car_repairs_menu" name="Repairs"
+        <!--Account Invoice Menu-->
+        <menuitem id="car_account_invoice_menu" name="Account Invoice"
                   parent="main_car_workshop_menu"
-                  sequence="1" action="action_car_repairs_config"/>
-
-        <!--Orders Menu-->
-        <menuitem id="car_orders_menu" name="Orders"
-                  parent="main_car_workshop_menu"
-                  sequence="2" action="action_car_orders_config"/>
-
-        <!--FALTAN FACTURAS-->
+                  sequence="3" action="action_car_account_invoice_config"/>
 
         <!--Customers Menus-->
         <menuitem id="car_customers_menus" name="Customers"
                   parent="main_car_workshop_menu"
-                  sequence="3"/>
+                  sequence="4"/>
 
         <!--Customer Menu-->
         <menuitem id="car_customers_menu" name="Customers"
                   parent="car_customers_menus"
                   sequence="1" action="action_car_customers_config"/>
 
-        <!--Vehicles Menu-->
-        <menuitem id="car_vehicles_menu" name="Vehicles"
-                  parent="car_customers_menus"
-                  sequence="2" action="action_car_vehicles_config"/>
 
         <!--Vehicle Configuration Menus-->
         <menuitem id="car_vconfig_menus" name="Configuration"
                   parent="main_car_workshop_menu"
-                  sequence="3"/>
+                  sequence="5"/>
 
         <!--Vehicle Models Menu-->
         <menuitem id="car_vmodels_menu" name="Models"
@@ -112,7 +86,7 @@
                   sequence="1" action="action_car_vmodels_config"/>
 
         <!--Vehicle Brand Menu-->
-        <menuitem id="car_vbrands_menu" name="Brand"
+        <menuitem id="car_vbrands_menu" name="Brands"
                   parent="car_vconfig_menus"
                   sequence="2" action="action_car_vbrands_config"/>
 
