--- a/car-workshop/views/inherit_project_task.xml
+++ b/car-workshop/views/inherit_project_task.xml
@@ -2,17 +2,129 @@
 <odoo>
     <data>
 
-       <!--Inherit Form View Project Project-->
+        <!--NEW Form View Project Project-->
         <record id="view_task_form2" model="ir.ui.view">
-            <field name="name">Order</field>
+            <field name="name">project.task.form</field>
             <field name="model">project.task</field>
-            <field name="inherit_id" ref="project.view_task_form2"/>
+            <field name="priority">1</field>
+            <field name="mode">primary</field>
             <field name="arch" type="xml">
-                <field name="user_id" position="after">
-                    <field name="vehicle"/>
-                </field>
+                <form>
+                    <sheet string="Task">
+                        <field name="kanban_state" widget="state_selection"/>
+                        <div class="oe_title">
+                            <h1 class="o_row">
+                                <field name="priority" widget="priority"/>
+                                <field name="name" placeholder="Task Title..."/>
+                            </h1>
+                        </div>
+                        <group>
+                            <group>
+                                <field name="project_id" domain="[('active', '=', True)]"/>
+                                <field name="user_id" class="o_task_user_field" options="{&quot;no_open&quot;: True}"/>
+                                <!--car-workshop field-->
+                                <field name="vehicle_id"/>
+                                <field name="legend_blocked" invisible="1"/>
+                                <field name="legend_normal" invisible="1"/>
+                                <field name="legend_done" invisible="1"/>
+                            </group>
+                            <group>
+                                <field name="date_deadline"/>
+                                <field name="tag_ids" widget="many2many_tags"
+                                       options="{'color_field': 'color', 'no_create_edit': True}"/>
+                            </group>
+                        </group>
+                        <notebook>
+                            <page name="description_page" string="Description">
+                                <field name="description" type="html"/>
+                                <div class="oe_clear"/>
+                            </page>
+                            <page string="Timesheets" attrs="{'invisible': [('project_id', '=', False)]}">
+                                <group>
+                                    <group>
+                                        <field name="planned_hours" widget="float_time"/>
+                                    </group>
+                                    <group>
+                                        <field name="progress" widget="progressbar"/>
+                                    </group>
+                                </group>
+                                <field name="timesheet_ids" context="{'default_project_id': project_id}">
+                                    <tree editable="bottom" string="Timesheet Activities" default_order="date">
+                                        <field name="date"/>
+                                        <field name="user_id" invisible="1"/>
+                                        <field name="employee_id" required="1"/>
+                                        <field name="name"/>
+                                        <field name="unit_amount" string="Duration" widget="float_time"/>
+                                        <field name="project_id" invisible="1"/>
+                                    </tree>
+                                </field>
+                                <group>
+                                    <group class="oe_subtotal_footer oe_right" name="project_hours">
+                                        <field name="effective_hours" widget="float_time"/>
+                                        <field name="children_hours" widget="float_time"
+                                               attrs="{'invisible' : [('children_hours', '=', 0.0)]}"/>
+                                        <field name="total_hours_spent" widget="float_time"
+                                               class="oe_subtotal_footer_separator"
+                                               attrs="{'invisible' : [('children_hours', '=', 0.0)]}"/>
+                                        <field name="remaining_hours" widget="float_time"
+                                               class="oe_subtotal_footer_separator" readonly="1"/>
+                                    </group>
+                                </group>
+                            </page>
+                            <page name="extra_info" string="Extra Info">
+                                <group>
+                                    <group>
+                                        <field name="sequence" groups="base.group_no_one"/>
+                                        <field name="partner_id"/>
+                                        <field name="email_from"/>
+                                        <field name="email_cc" groups="base.group_no_one"/>
+                                        <field name="parent_id" groups="project.group_subtask_project"/>
+                                        <field name="child_ids" invisible="1"/>
+                                        <field name="subtask_project_id" invisible="1"/>
+                                        <field name="company_id" groups="base.group_multi_company"
+                                               options="{'no_create': True}"/>
+                                        <field name="displayed_image_id" groups="base.group_no_one"/>
+                                    </group>
+                                    <group>
+                                        <field name="date_assign" groups="base.group_no_one"/>
+                                        <field name="date_last_stage_update" groups="base.group_no_one"/>
+                                    </group>
+                                    <group string="Working Time to Assign"
+                                           attrs="{'invisible': [('working_hours_open', '=', 0.0)]}">
+                                        <field name="working_hours_open" string="Hours"/>
+                                        <field name="working_days_open" string="Days"/>
+                                    </group>
+                                    <group string="Working Time to Close"
+                                           attrs="{'invisible': [('working_hours_close', '=', 0.0)]}">
+                                        <field name="working_hours_close" string="Hours"/>
+                                        <field name="working_days_close" string="Days"/>
+                                    </group>
+                                </group>
+                            </page>
+                        </notebook>
+                    </sheet>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers" groups="base.group_user"/>
+                        <field name="activity_ids" widget="mail_activity"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                    </div>
+                </form>
             </field>
         </record>
+
+        <!--Action Orders Menu-->
+        <record model="ir.actions.act_window" id="action_car_orders_config">
+            <field name="name">Orders</field>
+            <field name="res_model">project.task</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">kanban,form</field>
+
+        </record>
+
+        <!--Orders Menu-->
+        <menuitem id="car_orders_menu" name="Orders"
+                  parent="main_car_workshop_menu"
+                  sequence="2" action="action_car_orders_config"/>
 
     </data>
 </odoo>
