--- a/car-workshop/views/inherit_fleet_vehicle.xml
+++ b/car-workshop/views/inherit_fleet_vehicle.xml
@@ -3,80 +3,81 @@
     <data>
 
         <!-- NEW Form View Fleet Vehicle -->
-        <!--<record id='fleet_vehicle_view_form' model='ir.ui.view'>-->
-            <!--<field name="name">fleet.vehicle.form</field>-->
-            <!--<field name="model">fleet.vehicle</field>-->
-            <!--<field name="priority">1</field>-->
-            <!--<field name="arch" type="xml">-->
-                <!--<form string="Vehicle">-->
-                <!--<sheet>-->
-                    <!--<field name="image_medium" widget="image" class="oe_avatar"/>-->
-                    <!--<div class="oe_title">-->
-                        <!--<label for="model_id" class="oe_edit_only"/>-->
-                        <!--<h1>-->
-                            <!--<field name="model_id" placeholder="e.g. Model S"/>-->
-                        <!--</h1>-->
-                        <!--<label for="license_plate" class="oe_edit_only"/>-->
-                        <!--<h2>-->
-                            <!--<field name="license_plate" class="oe_inline" placeholder="e.g. PAE 326"/>-->
-                        <!--</h2>-->
-                        <!--<label for="tag_ids" class="oe_edit_only"/>-->
-                        <!--<field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"/>-->
-                    <!--</div>-->
-                    <!--<group col="2" string="General Properties">-->
-                        <!--<group>-->
-                            <!--<field name="driver_id"/>-->
-                            <!--<field name="location"/>-->
-                            <!--<field name="vin_sn"/>-->
-                            <!--<field name="model_year"/>-->
-                            <!--<field name="customer_id"/>-->
-                            <!--<field name="company_id" groups="base.group_multi_company"/>-->
-                        <!--</group>-->
-                        <!--<group>-->
-                            <!--<label for="odometer"/>-->
-                            <!--<div class="o_row">-->
-                                <!--<field name="odometer"/>-->
-                                <!--<field name="odometer_unit"/>-->
-                            <!--</div>-->
-                            <!--<field name="acquisition_date"/>-->
-                            <!--<field name="car_value"/>-->
-                            <!--<field name="residual_value"/>-->
-                        <!--</group>-->
-                    <!--</group>-->
-                    <!--<group col="2">-->
-                        <!--<group string="Additional Properties">-->
-                            <!--<field name="seats"/>-->
-                            <!--<field name="doors"/>-->
-                            <!--<field name="color"/>-->
-                        <!--</group>-->
-                        <!--<group string="Engine Options">-->
-                            <!--<field name="transmission"/>-->
-                            <!--<field name="fuel_type"/>-->
-                            <!--<label for="co2"/>-->
-                            <!--<div class="o_row" name="co2">-->
-                                <!--<field name="co2"/><span>g/km</span>-->
-                            <!--</div>-->
-                            <!--<field name="horsepower"/>-->
-                            <!--<field name="horsepower_tax"/>-->
-                            <!--<label for="power"/>-->
-                            <!--<div class="o_row">-->
-                                <!--<field name="power"/><span>kW</span>-->
-                            <!--</div>-->
-                        <!--</group>-->
-                    <!--</group>-->
-                <!--</sheet>-->
-                <!--<div class="oe_chatter">-->
-                    <!--<field name="message_follower_ids" widget="mail_followers"/>-->
-                    <!--<field name="message_ids" widget="mail_thread" options="{&quot;thread_level&quot;: 1}"/>-->
-                <!--</div>-->
-            <!--</form>-->
-            <!--</field>-->
-        <!--</record>-->
+        <record id='car-workshop_fleet_form_view' model='ir.ui.view'>
+            <field name="name">fleet.vehicle.form</field>
+            <field name="model">fleet.vehicle</field>
+            <field name="priority">1</field>
+            <field name="arch" type="xml">
+                <form string="Vehicle">
+                <sheet>
+                    <field name="image_medium" widget="image" class="oe_avatar"/>
+                    <div class="oe_title">
+                        <label for="model_id" class="oe_edit_only"/>
+                        <h1>
+                            <field name="model_id" placeholder="e.g. Model S"/>
+                        </h1>
+                        <label for="license_plate" class="oe_edit_only"/>
+                        <h2>
+                            <field name="license_plate" class="oe_inline" placeholder="e.g. PAE 326"/>
+                        </h2>
+                        <label for="tag_ids" class="oe_edit_only"/>
+                        <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"/>
+                    </div>
+                    <group col="2" string="General Properties">
+                        <group>
+                            <field name="driver_id"/>
+                            <field name="location"/>
+                            <field name="vin_sn"/>
+                            <field name="model_year"/>
+                            <field name="customer_id"/>
+                            <field name="company_id" groups="base.group_multi_company"/>
+                        </group>
+                        <group>
+                            <label for="odometer"/>
+                            <div class="o_row">
+                                <field name="odometer"/>
+                                <field name="odometer_unit"/>
+                            </div>
+                            <field name="acquisition_date"/>
+                            <field name="car_value"/>
+                            <field name="residual_value"/>
+                        </group>
+                    </group>
+                    <group col="2">
+                        <group string="Additional Properties">
+                            <field name="seats"/>
+                            <field name="doors"/>
+                            <field name="color"/>
+                        </group>
+                        <group string="Engine Options">
+                            <field name="transmission"/>
+                            <field name="fuel_type"/>
+                            <label for="co2"/>
+                            <div class="o_row" name="co2">
+                                <field name="co2"/><span>g/km</span>
+                            </div>
+                            <field name="horsepower"/>
+                            <field name="horsepower_tax"/>
+                            <label for="power"/>
+                            <div class="o_row">
+                                <field name="power"/><span>kW</span>
+                            </div>
+                        </group>
+                    </group>
+                </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="message_ids" widget="mail_thread" options="{&quot;thread_level&quot;: 1}"/>
+                </div>
+            </form>
+            </field>
+        </record>
 
         <!--Action Vehicles Menu-->
         <record model="ir.actions.act_window" id="action_car_vehicles_config">
             <field name="name">Vehicles</field>
             <field name="res_model">fleet.vehicle</field>
+            <field name="form_view_id">car-workshop_fleet_form_view</field>
             <field name="view_type">form</field>
             <field name="view_mode">kanban,form</field>
         </record>
