--- a/car-workshop/views/inherit_project_task.xml
+++ b/car-workshop/views/inherit_project_task.xml
@@ -69,6 +69,19 @@
                                                class="oe_subtotal_footer_separator" readonly="1"/>
                                     </group>
                                 </group>
+                                <field name="material_line_ids">
+                                    <tree string="Materials" editable="bottom">
+                                        <field name="product_id" />
+                                        <field name="product_uom_qty"/>
+                                        <field name="price_unit"/>
+                                        <field name="price_total"/>
+                                    </tree>
+                                </field>
+                                <group>
+                                    <group class="oe_subtotal_footer oe_right" name="project_amounts">
+                                        <field name="amount_total" widget="float"/>
+                                    </group>
+                                </group>
                             </page>
                             <page name="extra_info" string="Extra Info">
                                 <group>
