--- a/car-workshop/views/inherit_project_task.xml
+++ b/car-workshop/views/inherit_project_task.xml
@@ -69,8 +69,8 @@
                                                class="oe_subtotal_footer_separator" readonly="1"/>
                                     </group>
                                 </group>
-                                <field name="material_line_ids">
-                                    <tree string="Materials" editable="bottom">
+                                <field name="product_line_ids">
+                                    <tree string="Products" editable="bottom">
                                         <field name="product_id" />
                                         <field name="product_uom_qty"/>
                                         <field name="price_unit"/>
