--- a/car-workshop/views/inherit_project_task.xml
+++ b/car-workshop/views/inherit_project_task.xml
@@ -26,6 +26,7 @@
                                 <field name="legend_blocked" invisible="1"/>
                                 <field name="legend_normal" invisible="1"/>
                                 <field name="legend_done" invisible="1"/>
+                                <field name="warehouse_id" invisible="1"/>
                             </group>
                             <group>
                                 <field name="date_deadline"/>
