--- a/car-workshop/views/inherit_project_task.xml
+++ b/car-workshop/views/inherit_project_task.xml
@@ -49,7 +49,17 @@
                                         <field name="progress" widget="progressbar"/>
                                     </group>
                                 </group>
-                                <field name="timesheet_ids" context="{'default_project_id': project_id}">
+                                <field name="timesheet_ids" context="{'default_project_id': project_id}" mode="tree,kanban">
+                                    <form string="Timesheet Activities">
+                                        <group>
+                                            <field name="date"/>
+                                            <field name="user_id" invisible="1"/>
+                                            <field name="employee_id" required="1"/>
+                                            <field name="name"/>
+                                            <field name="unit_amount" string="Duration" widget="float_time"/>
+                                            <field name="project_id" invisible="1"/>
+                                        </group>
+                                    </form>
                                     <tree editable="bottom" string="Timesheet Activities" default_order="date">
                                         <field name="date"/>
                                         <field name="user_id" invisible="1"/>
@@ -71,7 +81,15 @@
                                                class="oe_subtotal_footer_separator" readonly="1"/>
                                     </group>
                                 </group>
-                                <field name="product_line_ids">
+                                <field name="product_line_ids" context="{'default_project_id': project_id}"  mode="tree,kanban">
+                                    <form string="Products">
+                                        <group>
+                                            <field name="product_id" />
+                                            <field name="product_uom_qty"/>
+                                            <field name="price_unit"/>
+                                            <field name="price_total"/>
+                                        </group>
+                                    </form>
                                     <tree string="Products" editable="bottom">
                                         <field name="product_id" />
                                         <field name="product_uom_qty"/>
@@ -138,6 +156,33 @@
             </field>
         </record>
 
+
+        <record id="car-workshop_product_line_kanban_view" model="ir.ui.view">
+            <field name="name">project.task.product.line.kanban</field>
+            <field name="model">project.task.product.line</field>
+            <field name="arch" type="xml">
+                <kanban class="o_kanban_mobile">
+                    <field name="product_id" />
+                    <field name="product_uom_qty"/>
+                    <field name="price_unit"/>
+                    <field name="price_total"/>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div t-attf-class="oe_kanban_card oe_kanban_global_click">
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <field name="product_id" />
+                                        <field name="product_uom_qty"/>
+                                        <field name="price_unit"/>
+                                        <strong><field name="price_total" widget="monetary"/></strong>
+                                    </div>
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record>
 
         <!--Action Orders Menu-->
         <record model="ir.actions.act_window" id="action_car_orders_config">
