Keyboard numeric in mobile

--- a/car-workshop/views/inherit_project_task.xml
+++ b/car-workshop/views/inherit_project_task.xml
@@ -85,21 +85,21 @@
                                     <form string="Products">
                                         <group>
                                             <field name="product_id" />
-                                            <field name="product_uom_qty"/>
-                                            <field name="price_unit"/>
-                                            <field name="price_total"/>
+                                            <field name="product_uom_qty" options="{'input_type': 'number'}"/>
+                                            <field name="price_unit" options="{'input_type': 'number'}"/>
+                                            <field name="price_total" readonly="1"/>
                                         </group>
                                     </form>
                                     <tree string="Products" editable="bottom">
                                         <field name="product_id" />
-                                        <field name="product_uom_qty"/>
-                                        <field name="price_unit"/>
-                                        <field name="price_total"/>
+                                        <field name="product_uom_qty" options="{'input_type': 'number'}"/>
+                                        <field name="price_unit" options="{'input_type': 'number'}"/>
+                                        <field name="price_total" readonly="1"/>
                                     </tree>
                                 </field>
                                 <group>
                                     <group class="oe_subtotal_footer oe_right" name="project_amounts">
-                                        <field name="amount_total" widget="float"/>
+                                        <field name="amount_total" widget="float" readonly="1"/>
                                     </group>
                                 </group>
                             </page>
@@ -172,9 +172,9 @@
                                 <div class="row">
                                     <div class="col-xs-12">
                                         <field name="product_id" />
-                                        <field name="product_uom_qty"/>
-                                        <field name="price_unit"/>
-                                        <strong><field name="price_total" widget="monetary"/></strong>
+                                        <field name="product_uom_qty" options="{'input_type': 'number'}"/>
+                                        <field name="price_unit" options="{'input_type': 'number'}"/>
+                                        <strong><field name="price_total" widget="monetary" readonly="1"/></strong>
                                     </div>
                                 </div>
                             </div>
