--- a/car-workshop/views/inherit_project_task.xml
+++ b/car-workshop/views/inherit_project_task.xml
@@ -10,6 +10,10 @@
             <field name="mode">primary</field>
             <field name="arch" type="xml">
                 <form>
+                    <header>
+                        <button name="workshop_create_invoices" string="Create Invoices" type="object"
+                            class="btn-primary" state="waiting"/>
+                    </header>
                     <sheet string="Task">
                         <field name="kanban_state" widget="state_selection"/>
                         <div class="oe_title">
