--- a/car-workshop/views/inherit_project_project.xml
+++ b/car-workshop/views/inherit_project_project.xml
@@ -2,11 +2,11 @@
 <odoo>
     <data>
 
-        <!--NEW Form View Project Project-->
+        <!-- Project Project Form View -->
         <record id="car-workshop_project_view_form" model="ir.ui.view">
             <field name="name">Repair</field>
             <field name="model">project.project</field>
-            <field name="priority">1</field>
+            <field name="priority">99</field>
             <field name="mode">primary</field>
             <field name="arch" type="xml">
                 <form>
@@ -32,9 +32,9 @@
             </field>
         </record>
 
-        <!--Action Repairs Menu-->
+        <!--Action Project Menu-->
         <record model="ir.actions.act_window" id="action_car_repairs_config">
-            <field name="name">Repairs</field>
+            <field name="name">Areas</field>
             <field name="res_model">project.project</field>
             <field name="form_view_id">car-workshop_project_view_form</field>
             <field name="view_type">form</field>
@@ -42,8 +42,8 @@
             <field name="domain">[("car_work","=",True)]</field>
         </record>
 
-        <!--Repairs Menu-->
-        <menuitem id="car_repairs_menu" name="Repairs"
+        <!--Project Menu-->
+        <menuitem id="car_repairs_menu" name="Areas"
                   parent="main_car_workshop_menu"
                   sequence="1" action="action_car_repairs_config"/>
 
