[ADD] project.task record

--- a/car-workshop/views/inherit_project_task.xml
+++ b/car-workshop/views/inherit_project_task.xml
@@ -87,8 +87,8 @@
                                 <field name="validity_date" attrs="{'invisible': [('state', 'in', ['sale', 'done'])]}"/>
                                 <field name="confirmation_date"
                                        attrs="{'invisible': [('state', 'in', ['draft', 'sent', 'cancel'])]}"/>
-                                <!--<field name="pricelist_id" groups="product.group_sale_pricelist"/>-->
-                                <!--<field name="currency_id" invisible="1"/>-->
+                                <field name="pricelist_id" groups="product.group_sale_pricelist"/>
+                                <field name="currency_id" invisible="1"/>
                                 <field name="payment_term_id" options="{'no_create': True}"/>
                             </group>
                         </group>
