--- a/car-workshop/views/car-workshop.xml
+++ b/car-workshop/views/car-workshop.xml
@@ -55,6 +55,22 @@
         </record>
 
 
+        <!--PRUEBAS-->
+
+        <record model="ir.actions.act_window" id="action_car_pruebas_config">
+            <field name="name">PRUEBAS</field>
+            <field name="res_model">project.task</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+        <menuitem id="car_pruebas_menu" name="Pruebas"
+                  parent="main_car_workshop_menu"
+                  sequence="3" action="action_car_pruebas_config"/>
+
+        <!--FIN PRUEBAS-->
+
+
         <!--Main Menu-->
         <menuitem id="main_car_workshop_menu" name="Car Workshop"
                   web_icon="car-workshop,static/description/icon.png"
@@ -100,7 +116,6 @@
         <menuitem id="car_vproducts_menu" name="Products"
                   parent="car_vconfig_menus"
                   sequence="4" action="action_car_vproducts_config"/>
-
 
     </data>
 </odoo>
